--- a/Assets/Editor Default Resources/DialogueSystem/DSToolbarStyles.uss
+++ b/Assets/Editor Default Resources/DialogueSystem/DSToolbarStyles.uss
@@ -58,3 +58,8 @@ TextField:focus > .unity-text-field__label
 {
 	color: var(--ds-colors-window-yellow);
 }
+
+.ds-toolbar__button__selected
+{
+	color: var(--ds-colors-window-yellow);
+}
